omnifood project responsive

--- a/queries.css
+++ b/queries.css
@@ -12,3 +12,80 @@ rem creates problem in media queries so we use em instead of rem
   max-width: 120rem;
   }
 }
+
+/* **************** 
+  1200/16 === 75em (dsktop version)
+  below 1200px
+/* ************** */
+
+@media (max-width: 75em){
+  html{
+    /* 9px/16px === 0.56 */
+    font-size: 56% ;
+  }
+  
+.heading-primary{
+  font-size: 4.8rem;
+}
+.heading-secondary{
+  font-size: 3.6rem;
+  
+}
+.heading-tertiary{
+  font-size: 2.6rem;
+}
+.main-header{
+padding:0 3.2rem;
+}
+.grid{
+  gap: 6.4rem;
+}
+}
+/* **************** 
+  844/16 === 55em (tablet version)
+  below 844px
+/* ************** */
+
+@media (max-width: 55em){
+  html{
+    /* 8px/16px === 0.50 */
+    font-size: 50% ;
+  }
+  .hero{
+    
+    grid-template-columns:1fr;
+    gap: 6.4rem;
+
+  }
+  .hero-img{
+    width: 60%;
+  }
+  .hero-text{
+    text-align: center;
+    padding: 0 6.4rem;
+  }
+  .hero-img-box{
+    text-align: center;
+  }
+  .delivered{
+    justify-content: center;
+  }
+  .featured-logos img {
+    width: 12%;
+  }
+  .testimonial-section{
+    display: grid;
+    grid-template-columns: 1fr;
+    gap: 1rem;
+  }
+  .gallery{
+    grid-template-columns: repeat(6, 1fr);
+    padding: 0 2.4rem;
+  }
+  .grid-cta{
+    grid-template-columns: 60% 40%;
+}
+.footer{
+  padding: 0 3.2 0 4.2rem;
+}
+}
