--- a/style.css
+++ b/style.css
@@ -627,7 +627,7 @@ font-weight: 700;
   align-items: center;
 }
 .footer{
-  padding: 9.6rem 0;
+  padding: 9.6rem 3.2rem;
   border-top: 0.7px solid #333;
   
 }
