--- a/queries.css
+++ b/queries.css
@@ -88,4 +88,103 @@ padding:0 3.2rem;
 .footer{
   padding: 0 3.2 0 4.2rem;
 }
+.mobile-nav-btn{
+  display: block;
 }
+.main-nav{
+  background-color: #ffffffef;
+  position: absolute;
+  top: 0;
+  left: 0;
+  width: 100%;
+  height: 100vh;
+  display: flex;
+  align-items: center;
+  justify-content: center;
+  transform: translateX(100%);
+  transition: all 1s ease-in;
+  
+
+
+  /* display none will not let use any
+  transitions so we use opacity */
+  opacity: 0;
+
+  /* to hide it from screen readers */
+  visibility: hidden;
+
+  /* to avoid mouse and keyboards events */
+  pointer-events: none;
+}
+.main-nav-list{
+  flex-direction: column;
+  gap: 3.2rem;
+}
+.main-nav-link:link,
+.main-nav-link:visited{
+  font-size: 2.4rem;
+}
+.nav-open .main-nav{
+  opacity: 1;
+  visibility: visible;
+  pointer-events: all;
+  transform: translateX(0);
+  transition: none;
+
+}
+.nav-open .mobile-nav-icon[name="close-outline"]{
+  display: block;
+}
+.nav-open .mobile-nav-icon[name="grid-outline"]{
+  display: none;
+}
+
+}
+/* **************** 
+  600/16 === 38em (tablet version)
+  below 600px
+/* ************** */
+
+@media (max-width: 38em){
+  html{
+    /* 7px/16px === 0.43 */
+    font-size: 43% ;
+  }
+  .hero-img{
+    width: 60%;
+  }
+  .grid-cta{
+  
+    grid-template-columns: 50% 50%;
+}
+.cta-form{
+
+  grid-template-columns:  1fr;
+}
+.grid--3--cols,
+.grid--4--cols{
+  grid-template-columns: repeat(2, 1fr);
+}
+.diets{
+  grid-column: 1/-1;
+  justify-self: center;
+}
+.grid-5-cols{
+grid-template-columns: repeat(3, 1fr);
+}
+.footer-panel{
+  grid-row: 1;
+  grid-column: span 2;
+}
+.footer {
+  display: grid;
+  grid-template-columns: repeat(6,1fr);
+
+}
+.address-col,
+.logo{
+  grid-column: span 3;
+}
+}
+
+
